[gd_scene load_steps=7 format=3 uid="uid://do6p8bh7i5k1f"]

[ext_resource type="Script" uid="uid://oyq2u432jbdk" path="res://script/health_up.gd" id="1_jq0b7"]
[ext_resource type="Texture2D" uid="uid://cbllxoxeahprb" path="res://assets/burger.png" id="2_cwoqe"]
[ext_resource type="AudioStream" uid="uid://ckoqg13ussqmn" path="res://sounds/bugout sounds/chomp.mp3" id="3_jbn1s"]

[sub_resource type="Animation" id="Animation_olib4"]
resource_name = "HeartDissolve"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7oolr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3l8i1"]
_data = {
&"HeartDissolve": SubResource("Animation_olib4"),
&"RESET": SubResource("Animation_7oolr")
}

[node name="Health_Up" type="Area2D"]
z_index = 6
script = ExtResource("1_jq0b7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(0.182292, 0.196181)
texture = ExtResource("2_cwoqe")
offset = Vector2(0, 115.867)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-26, 22, -26, 17, -29, 15, -26, 11, -27, 6, -26, 3, -26, -1, -29, -4, -26, -6, -15, -19, 17, -19, 29, -4, 27, 0, 26, 5, 28, 6, 28, 15, 26, 17, 26, 23)

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3l8i1")
}

[node name="HeartHappy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jbn1s")
volume_db = 5.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 21
one_shot = true
explosiveness = 0.76
randomness = 0.26
emission_shape = 1
emission_sphere_radius = 42.28
direction = Vector2(20.05, 0)
spread = 135.64
initial_velocity_min = 352.52
initial_velocity_max = 352.52
color = Color(1, 0.992157, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
